Created page with "''Toto je aktualizovaná verze [[Basic_Part_Design_Tutorial|Základního tutoriálu pro návrh dílu]].''"

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -59,7 +59,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p><i>This is an updated version of the <a href="../Basic_Part_Design_Tutorial.html" title="Basic Part Design Tutorial">Basic Part Design Tutorial</a>.</i>
+<p><i>Toto je aktualizovan&aacute; verze <a href="../Basic_Part_Design_Tutorial.html" title="Basic Part Design Tutorial">Z&aacute;kladn&iacute;ho tutori&aacute;lu pro n&aacute;vrh d&iacute;lu</a>.</i>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
 </p><p>This tutorial introduces users to the <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Part Design Workbench</a>. In this tutorial we will create a 3D solid model of the part shown in the image above. In the <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">drawing</a> at the end of this paragraph all the necessary dimensions to complete the task are given.
 </p><p>We will start by creating a core solid shape from a base Sketch and then build on that shape, adding what are known as features. These features will either add material to, or remove material from the solid by use of additional sketches and accompanying feature operations.
@@ -399,12 +399,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120151742
+Cached time: 20260120151825
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.268 seconds
-Real time usage: 0.321 seconds
+CPU time usage: 0.275 seconds
+Real time usage: 0.400 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41799/2097152 bytes
 Template argument size: 11561/2097152 bytes
@@ -415,19 +415,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.938      1 -total
- 19.00%    6.069      1 Template:PartDesign_Tools_navi/cs
- 18.50%    5.907      3 Template:Navigation_menu_2
- 16.33%    5.217      1 Template:Sketcher_Tools_navi/cs
- 12.53%    4.003      1 Template:Userdocnavi/cs
-  8.60%    2.746      7 Template:ComboBox
-  7.61%    2.429      1 Template:Version
-  7.05%    2.253      3 Template:CheckBox
-  6.17%    1.970      1 Template:TutorialInfo
-  5.61%    1.790     19 Template:Button
+100.00%   36.328      1 -total
+ 24.04%    8.733      1 Template:PartDesign_Tools_navi/cs
+ 17.49%    6.355      3 Template:Navigation_menu_2
+ 15.78%    5.734      1 Template:Userdocnavi/cs
+ 15.63%    5.677      1 Template:Sketcher_Tools_navi/cs
+  8.99%    3.265      3 Template:CheckBox
+  5.72%    2.080      7 Template:ComboBox
+  5.69%    2.068      1 Template:TutorialInfo
+  5.04%    1.830     19 Template:Button
+  3.80%    1.382      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120151741 and revision id 1741563. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120151825 and revision id 1741565. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
