--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -62,7 +62,7 @@
 <p><i>Toto je aktualizovan&aacute; verze <a href="../Basic_Part_Design_Tutorial.html" title="Basic Part Design Tutorial">Z&aacute;kladn&iacute;ho tutori&aacute;lu pro n&aacute;vrh d&iacute;lu</a>.</i>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
 </p><p>Tento tutori&aacute;l seznamuje u&#382;ivatele s <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute;plochou Part Design</a>. V tomto tutori&aacute;lu vytvo&#345;&iacute;me 3D model sou&#269;&aacute;st zobrazenou na obr&aacute;zku v&yacute;&scaron;e. Ve <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">v&yacute;kresu</a> na konci tohoto odstavce jsou uvedeny v&scaron;echny rozm&#283;ry pot&#345;ebn&eacute; k dokon&#269;en&iacute; &uacute;kolu.
-</p><p>We will start by creating a core solid shape from a base Sketch and then build on that shape, adding what are known as features. These features will either add material to, or remove material from the solid by use of additional sketches and accompanying feature operations.
+</p><p>Za&#269;neme vytvo&#345;en&iacute;m z&aacute;kladn&iacute;ho tvaru t&#283;lesa ze z&aacute;kladn&iacute;ho n&aacute;&#269;rtu a pot&eacute; na tomto tvaru budeme stav&#283;t a p&#345;id&aacute;vat takzvan&eacute; prvky. Tyto prvky bu&#271; p&#345;id&aacute;vaj&iacute; materi&aacute;l k t&#283;lesu, nebo z n&#283;j materi&aacute;l odeb&iacute;raj&iacute; pomoc&iacute; dal&scaron;&iacute;ch n&aacute;&#269;rt&#367; a doprovodn&yacute;ch operac&iacute; s prvky.
 </p><p>We will follow some of the techniques described in <a href="../Feature_editing.html#Advice_for_creating_stable_models" title="Feature editing">Advice for creating stable models</a>:
 </p>
 <ul><li>We will use a <b>master sketch</b>.</li>
@@ -399,12 +399,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120151950
+Cached time: 20260120152031
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.250 seconds
-Real time usage: 0.351 seconds
+CPU time usage: 0.277 seconds
+Real time usage: 0.459 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41799/2097152 bytes
 Template argument size: 11561/2097152 bytes
@@ -415,19 +415,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.832      1 -total
- 25.59%    9.426      1 Template:PartDesign_Tools_navi/cs
- 19.26%    7.093      1 Template:Sketcher_Tools_navi/cs
- 18.65%    6.870      3 Template:Navigation_menu_2
- 13.31%    4.903      1 Template:Userdocnavi/cs
-  7.98%    2.938      1 Template:TutorialInfo
-  6.78%    2.496      3 Template:CheckBox
-  6.17%    2.274      7 Template:ComboBox
-  4.44%    1.634     19 Template:Button
-  3.53%    1.300      8 Template:KEY
+100.00%   84.606      1 -total
+ 33.30%   28.173      1 Template:Userdocnavi/cs
+ 23.61%   19.979      3 Template:Navigation_menu_2
+ 23.42%   19.818      1 Template:PartDesign_Tools_navi/cs
+ 14.93%   12.634      1 Template:Sketcher_Tools_navi/cs
+  5.50%    4.650      1 Template:Version
+  5.18%    4.382      1 Template:TutorialInfo
+  4.32%    3.655      3 Template:CheckBox
+  3.04%    2.569      7 Template:ComboBox
+  2.27%    1.922      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120151950 and revision id 1741567. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120152030 and revision id 1741569. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
