--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -63,11 +63,11 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
 </p><p>Tento tutori&aacute;l seznamuje u&#382;ivatele s <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute;plochou Part Design</a>. V tomto tutori&aacute;lu vytvo&#345;&iacute;me 3D model sou&#269;&aacute;st zobrazenou na obr&aacute;zku v&yacute;&scaron;e. Ve <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">v&yacute;kresu</a> na konci tohoto odstavce jsou uvedeny v&scaron;echny rozm&#283;ry pot&#345;ebn&eacute; k dokon&#269;en&iacute; &uacute;kolu.
 </p><p>Za&#269;neme vytvo&#345;en&iacute;m z&aacute;kladn&iacute;ho tvaru t&#283;lesa ze z&aacute;kladn&iacute;ho n&aacute;&#269;rtu a pot&eacute; na tomto tvaru budeme stav&#283;t a p&#345;id&aacute;vat takzvan&eacute; prvky. Tyto prvky bu&#271; p&#345;id&aacute;vaj&iacute; materi&aacute;l k t&#283;lesu, nebo z n&#283;j materi&aacute;l odeb&iacute;raj&iacute; pomoc&iacute; dal&scaron;&iacute;ch n&aacute;&#269;rt&#367; a doprovodn&yacute;ch operac&iacute; s prvky.
-</p><p>We will follow some of the techniques described in <a href="../Feature_editing.html#Advice_for_creating_stable_models" title="Feature editing">Advice for creating stable models</a>:
+</p><p>Budeme postupovat podle n&#283;kter&yacute;ch technik popsan&yacute;ch v &#269;l&aacute;nku <a href="../Feature_editing.html#Advice_for_creating_stable_models" title="Feature editing">Rady pro vytv&aacute;&#345;en&iacute; stabiln&iacute;ch model&#367;</a>:
 </p>
-<ul><li>We will use a <b>master sketch</b>.</li>
-<li><b>Named constraints</b> will be used to hold dimensions that can be referenced later in the model construction.<br>For instance, to change the model width from 53 mm, as in the technical drawing, to 55 mm we need only modify the <b>Length</b> value of the appropriate <b>named constraint</b> in the <b>master sketch</b> and the whole model will modify accordingly. This is <i>parametric</i> design in action.</li>
-<li><b>External geometries</b> are potentially subject to the <a href="../Topological_naming_problem.html" title="Topological naming problem">Topological Naming Problem</a>. We will use them only when strictly necessary and will attempt to reference to the most <b>stable</b> elements available. Referencing edges and vertices of sketches is normally more stable than referencing edges and vertices of generated solid geometry.</li></ul>
+<ul><li>Pou&#382;ijeme <b>hlavn&iacute; skicu</b>.</li>
+<li><b>Pojmenovan&eacute; vazby</b> budou pou&#382;ity k uchov&aacute;n&iacute; rozm&#283;r&#367;, na kter&eacute; lze pozd&#283;ji v konstrukci modelu odkazovat. Nap&#345;&iacute;klad pro zm&#283;nu &scaron;&iacute;&#345;ky modelu z 53 mm, jak je uvedeno v technick&eacute;m v&yacute;kresu, na 55 mm sta&#269;&iacute; pouze upravit hodnotu <b>D&eacute;lka</b> p&#345;&iacute;slu&scaron;n&eacute; <b>pojmenovan&eacute; vazby</b> v <b>hlavn&iacute;m n&aacute;&#269;rtu</b> a cel&yacute; model se odpov&iacute;daj&iacute;c&iacute;m zp&#367;sobem uprav&iacute;. Toto je p&#345;&iacute;klad pou&#382;it&iacute; <i>parametrick&eacute;ho</i> n&aacute;vrhu v praxi.</li>
+<li><b>Extern&iacute; geometrie</b> mohou b&yacute;t potenci&aacute;ln&#283; p&#345;edm&#283;tem <a href="../Topological_naming_problem.html" title="Topological naming problem">topologick&eacute;ho probl&eacute;mu pojmenov&aacute;n&iacute;</a>. Budeme je pou&#382;&iacute;vat pouze v nezbytn&yacute;ch p&#345;&iacute;padech a budeme se sna&#382;it odkazovat na nejstabiln&#283;j&scaron;&iacute; dostupn&eacute; prvky. Odkazov&aacute;n&iacute; na hrany a vrcholy n&aacute;&#269;rt&#367; je obvykle stabiln&#283;j&scaron;&iacute; ne&#382; odkazov&aacute;n&iacute; na hrany a vrcholy generovan&eacute; geometrie t&#283;les.</li></ul>
 <p>This Tutorial will not use every feature and tool available in the Part Design Workbench, but will provide a basic foundation upon which users can build their knowledge and skills.
 </p><p>Feel free to signal any errors or problems in this forum thread: <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=73235">New Part Design Tutorial for FC 019 and 020</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Tutorial_Drawing_Sheet.png&amp;filetimestamp=20170430215529&amp;.html" class="mw-file-description"><img src="../File/Tutorial_Drawing_Sheet.png" decoding="async" width="900" height="636" class="mw-file-element" data-file-width="1488" data-file-height="1052"></a></span>
@@ -399,12 +399,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120152031
+Cached time: 20260120152834
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.277 seconds
-Real time usage: 0.459 seconds
+CPU time usage: 0.242 seconds
+Real time usage: 0.484 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41799/2097152 bytes
 Template argument size: 11561/2097152 bytes
@@ -415,19 +415,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.606      1 -total
- 33.30%   28.173      1 Template:Userdocnavi/cs
- 23.61%   19.979      3 Template:Navigation_menu_2
- 23.42%   19.818      1 Template:PartDesign_Tools_navi/cs
- 14.93%   12.634      1 Template:Sketcher_Tools_navi/cs
-  5.50%    4.650      1 Template:Version
-  5.18%    4.382      1 Template:TutorialInfo
-  4.32%    3.655      3 Template:CheckBox
-  3.04%    2.569      7 Template:ComboBox
-  2.27%    1.922      8 Template:KEY
+100.00%   90.055      1 -total
+ 30.47%   27.438      1 Template:PartDesign_Tools_navi/cs
+ 12.27%   11.051      1 Template:Userdocnavi/cs
+ 11.78%   10.606      1 Template:Sketcher_Tools_navi/cs
+ 10.15%    9.144      1 Template:TutorialInfo
+  9.01%    8.118      3 Template:Navigation_menu_2
+  8.41%    7.577      5 Template:Clear
+  7.01%    6.316      3 Template:CheckBox
+  6.84%    6.160      7 Template:ComboBox
+  3.30%    2.969     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120152030 and revision id 1741569. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120152833 and revision id 1741571. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
