Created page with "Tento výukový program nevyužije všechny funkce a nástroje dostupné v pracovním prostředí Part Design, ale poskytne základy, na kterých mohou uživatelé budovat své znalosti a dovednosti."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -68,7 +68,7 @@
 <ul><li>Pou&#382;ijeme <b>hlavn&iacute; skicu</b>.</li>
 <li><b>Pojmenovan&eacute; vazby</b> budou pou&#382;ity k uchov&aacute;n&iacute; rozm&#283;r&#367;, na kter&eacute; lze pozd&#283;ji v konstrukci modelu odkazovat. Nap&#345;&iacute;klad pro zm&#283;nu &scaron;&iacute;&#345;ky modelu z 53 mm, jak je uvedeno v technick&eacute;m v&yacute;kresu, na 55 mm sta&#269;&iacute; pouze upravit hodnotu <b>D&eacute;lka</b> p&#345;&iacute;slu&scaron;n&eacute; <b>pojmenovan&eacute; vazby</b> v <b>hlavn&iacute;m n&aacute;&#269;rtu</b> a cel&yacute; model se odpov&iacute;daj&iacute;c&iacute;m zp&#367;sobem uprav&iacute;. Toto je p&#345;&iacute;klad pou&#382;it&iacute; <i>parametrick&eacute;ho</i> n&aacute;vrhu v praxi.</li>
 <li><b>Extern&iacute; geometrie</b> mohou b&yacute;t potenci&aacute;ln&#283; p&#345;edm&#283;tem <a href="../Topological_naming_problem.html" title="Topological naming problem">topologick&eacute;ho probl&eacute;mu pojmenov&aacute;n&iacute;</a>. Budeme je pou&#382;&iacute;vat pouze v nezbytn&yacute;ch p&#345;&iacute;padech a budeme se sna&#382;it odkazovat na nejstabiln&#283;j&scaron;&iacute; dostupn&eacute; prvky. Odkazov&aacute;n&iacute; na hrany a vrcholy n&aacute;&#269;rt&#367; je obvykle stabiln&#283;j&scaron;&iacute; ne&#382; odkazov&aacute;n&iacute; na hrany a vrcholy generovan&eacute; geometrie t&#283;les.</li></ul>
-<p>This Tutorial will not use every feature and tool available in the Part Design Workbench, but will provide a basic foundation upon which users can build their knowledge and skills.
+<p>Tento v&yacute;ukov&yacute; program nevyu&#382;ije v&scaron;echny funkce a n&aacute;stroje dostupn&eacute; v pracovn&iacute;m prost&#345;ed&iacute; Part Design, ale poskytne z&aacute;klady, na kter&yacute;ch mohou u&#382;ivatel&eacute; budovat sv&eacute; znalosti a dovednosti.
 </p><p>Feel free to signal any errors or problems in this forum thread: <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=73235">New Part Design Tutorial for FC 019 and 020</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Tutorial_Drawing_Sheet.png&amp;filetimestamp=20170430215529&amp;.html" class="mw-file-description"><img src="../File/Tutorial_Drawing_Sheet.png" decoding="async" width="900" height="636" class="mw-file-element" data-file-width="1488" data-file-height="1052"></a></span>
 </p>
@@ -399,12 +399,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120152834
+Cached time: 20260120152921
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.242 seconds
-Real time usage: 0.484 seconds
+CPU time usage: 0.267 seconds
+Real time usage: 0.569 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41799/2097152 bytes
 Template argument size: 11561/2097152 bytes
@@ -415,19 +415,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.055      1 -total
- 30.47%   27.438      1 Template:PartDesign_Tools_navi/cs
- 12.27%   11.051      1 Template:Userdocnavi/cs
- 11.78%   10.606      1 Template:Sketcher_Tools_navi/cs
- 10.15%    9.144      1 Template:TutorialInfo
-  9.01%    8.118      3 Template:Navigation_menu_2
-  8.41%    7.577      5 Template:Clear
-  7.01%    6.316      3 Template:CheckBox
-  6.84%    6.160      7 Template:ComboBox
-  3.30%    2.969     19 Template:Button
+100.00%   79.262      1 -total
+ 23.12%   18.322      1 Template:PartDesign_Tools_navi/cs
+ 17.77%   14.086      1 Template:TutorialInfo
+ 15.76%   12.488      3 Template:Navigation_menu_2
+ 11.15%    8.839      1 Template:Userdocnavi/cs
+ 10.95%    8.679      1 Template:Sketcher_Tools_navi/cs
+  7.99%    6.332      3 Template:CheckBox
+  6.30%    4.992      7 Template:ComboBox
+  5.05%    4.005      1 Template:Version
+  3.46%    2.742     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120152833 and revision id 1741571. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120152920 and revision id 1741573. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
