--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -69,7 +69,7 @@
 <li><b>Pojmenovan&eacute; vazby</b> budou pou&#382;ity k uchov&aacute;n&iacute; rozm&#283;r&#367;, na kter&eacute; lze pozd&#283;ji v konstrukci modelu odkazovat. Nap&#345;&iacute;klad pro zm&#283;nu &scaron;&iacute;&#345;ky modelu z 53 mm, jak je uvedeno v technick&eacute;m v&yacute;kresu, na 55 mm sta&#269;&iacute; pouze upravit hodnotu <b>D&eacute;lka</b> p&#345;&iacute;slu&scaron;n&eacute; <b>pojmenovan&eacute; vazby</b> v <b>hlavn&iacute;m n&aacute;&#269;rtu</b> a cel&yacute; model se odpov&iacute;daj&iacute;c&iacute;m zp&#367;sobem uprav&iacute;. Toto je p&#345;&iacute;klad pou&#382;it&iacute; <i>parametrick&eacute;ho</i> n&aacute;vrhu v praxi.</li>
 <li><b>Extern&iacute; geometrie</b> mohou b&yacute;t potenci&aacute;ln&#283; p&#345;edm&#283;tem <a href="../Topological_naming_problem.html" title="Topological naming problem">topologick&eacute;ho probl&eacute;mu pojmenov&aacute;n&iacute;</a>. Budeme je pou&#382;&iacute;vat pouze v nezbytn&yacute;ch p&#345;&iacute;padech a budeme se sna&#382;it odkazovat na nejstabiln&#283;j&scaron;&iacute; dostupn&eacute; prvky. Odkazov&aacute;n&iacute; na hrany a vrcholy n&aacute;&#269;rt&#367; je obvykle stabiln&#283;j&scaron;&iacute; ne&#382; odkazov&aacute;n&iacute; na hrany a vrcholy generovan&eacute; geometrie t&#283;les.</li></ul>
 <p>Tento v&yacute;ukov&yacute; program nevyu&#382;ije v&scaron;echny funkce a n&aacute;stroje dostupn&eacute; v pracovn&iacute;m prost&#345;ed&iacute; Part Design, ale poskytne z&aacute;klady, na kter&yacute;ch mohou u&#382;ivatel&eacute; budovat sv&eacute; znalosti a dovednosti.
-</p><p>Feel free to signal any errors or problems in this forum thread: <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=73235">New Part Design Tutorial for FC 019 and 020</a>.
+</p><p>Pokud naraz&iacute;te na n&#283;jak&eacute; chyby nebo probl&eacute;my, nev&aacute;hejte je nahl&aacute;sit v tomto f&oacute;ru: <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=73235">Nov&yacute; n&aacute;vod k n&aacute;vrhu d&iacute;l&#367; pro FC 019 a 020</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Tutorial_Drawing_Sheet.png&amp;filetimestamp=20170430215529&amp;.html" class="mw-file-description"><img src="../File/Tutorial_Drawing_Sheet.png" decoding="async" width="900" height="636" class="mw-file-element" data-file-width="1488" data-file-height="1052"></a></span>
 </p>
 <h2><span class="mw-headline" id="Preliminary_notes">Preliminary notes</span></h2>
@@ -399,12 +399,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120152921
+Cached time: 20260120153045
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.267 seconds
-Real time usage: 0.569 seconds
+CPU time usage: 0.274 seconds
+Real time usage: 0.419 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41799/2097152 bytes
 Template argument size: 11561/2097152 bytes
@@ -415,19 +415,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.262      1 -total
- 23.12%   18.322      1 Template:PartDesign_Tools_navi/cs
- 17.77%   14.086      1 Template:TutorialInfo
- 15.76%   12.488      3 Template:Navigation_menu_2
- 11.15%    8.839      1 Template:Userdocnavi/cs
- 10.95%    8.679      1 Template:Sketcher_Tools_navi/cs
-  7.99%    6.332      3 Template:CheckBox
-  6.30%    4.992      7 Template:ComboBox
-  5.05%    4.005      1 Template:Version
-  3.46%    2.742     19 Template:Button
+100.00%   74.146      1 -total
+ 21.77%   16.139      8 Template:KEY
+ 18.66%   13.835      1 Template:Sketcher_Tools_navi/cs
+ 14.97%   11.101      1 Template:PartDesign_Tools_navi/cs
+ 11.46%    8.498      3 Template:Navigation_menu_2
+  7.30%    5.413      1 Template:Userdocnavi/cs
+  6.89%    5.110      5 Template:Clear
+  5.65%    4.189      1 Template:TutorialInfo
+  5.61%    4.161      1 Template:Version
+  5.30%    3.933      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120152920 and revision id 1741573. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120153044 and revision id 1741575. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
