--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -85,7 +85,9 @@
 <li>B&#283;hem v&yacute;vojov&eacute;ho cyklu v0.21 byla zavedena nov&aacute; ikona pro n&aacute;stroj <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Sketcher Vytvo&#345;it lomenou &#269;&aacute;ru</a>: <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. Star&aacute; ikona vypad&aacute; takto: <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline_rel_0.20.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. V tomto tutori&aacute;lu budeme pou&#382;&iacute;vat novou ikonu.</li>
 <li>N&#283;kter&eacute; koncep&#269;n&iacute; informace najdete v sekci <a href="../Part_and_PartDesign.html#PartDesign_Workbench_Concepts" title="Part and PartDesign">Koncepce pracovn&iacute;ho prost&#345;ed&iacute; Part Design</a>.</li>
 <li>Podrobn&#283;j&scaron;&iacute; vysv&#283;tlen&iacute; n&#283;kter&yacute;ch zde pou&#382;it&yacute;ch pojm&#367; najdete v sekci <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a>.</li></ul>
-<h2><span class="mw-headline" id="Startup">Startup</span></h2>
+<p><span id="Startup"></span>
+</p>
+<h2><span id="Zah.C3.A1jen.C3.AD"></span><span class="mw-headline" id="Zah&aacute;jen&iacute;">Zah&aacute;jen&iacute;</span></h2>
 <p>First make sure you are in the <span typeof="mw:File"><a href="../PartDesign_Workbench.html" title="PartDesign Workbench"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Part Design Workbench</a>. If required select it from the <a href="../Std_Workbench.html" title="Std Workbench">Workbench dropdown list</a>. Once there, you will want to create a new document if you have not done so already. It is a good habit to save your work often, so first save the new document, giving it any name you choose.
 </p><p>All work in Part Design begins with a <a href="../Glossary.html#Body" title="Glossary">body</a>. Click <span typeof="mw:File"><a href="../PartDesign_Body.html" title="PartDesign Body"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Create new body</a> to create and activate one. Note that it is also possible to skip this step: when creating a sketch using the Part Design <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> tool, if no existing body is found, a new one is automatically created and activated.
 </p>
@@ -400,13 +402,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120155018
+Cached time: 20260120155054
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.294 seconds
-Real time usage: 1.254 seconds
-Preprocessor visited node count: 830/1000000
+CPU time usage: 0.267 seconds
+Real time usage: 0.338 seconds
+Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
 Highest expansion depth: 5/100
@@ -416,19 +418,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  192.667      1 -total
- 21.56%   41.540      1 Template:Userdocnavi/cs
- 16.04%   30.901      1 Template:Sketcher_Tools_navi/cs
- 15.23%   29.343      1 Template:PartDesign_Tools_navi/cs
- 13.40%   25.821      3 Template:CheckBox
-  7.88%   15.188      3 Template:Navigation_menu_2
-  6.21%   11.970      1 Template:TutorialInfo
-  5.79%   11.156      7 Template:ComboBox
-  5.46%   10.523     19 Template:Button
-  3.77%    7.271      5 Template:Clear
+100.00%   38.382      1 -total
+ 19.51%    7.490      1 Template:Sketcher_Tools_navi/cs
+ 18.13%    6.960      1 Template:PartDesign_Tools_navi/cs
+ 17.10%    6.565      3 Template:Navigation_menu_2
+ 13.08%    5.020      1 Template:Userdocnavi/cs
+  7.76%    2.977      1 Template:TutorialInfo
+  7.16%    2.747      7 Template:ComboBox
+  6.72%    2.578      3 Template:CheckBox
+  6.24%    2.396     19 Template:Button
+  4.57%    1.756      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155016 and revision id 1741579. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155054 and revision id 1741581. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
