Created page with "Nejprve se ujistěte, že jste v [[File:Workbench_PartDesign.svg|24px|link=PartDesign_Workbench]] [[PartDesign_Workbench|pracovní ploše Part Design]]. V případě potřeby ho vyberte z [[Std_Workbench|rozevíracího seznamu pracovních prostředí]]. Jakmile tam budete, budete chtít vytvořit nový dokument, pokud jste tak ještě neučinili. Je dobré si zvyknout svou práci často ukládat, takže nejprve nový dokument uložte a pojmenujte ho podle svého uvážení."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -88,7 +88,7 @@
 <p><span id="Startup"></span>
 </p>
 <h2><span id="Zah.C3.A1jen.C3.AD"></span><span class="mw-headline" id="Zah&aacute;jen&iacute;">Zah&aacute;jen&iacute;</span></h2>
-<p>First make sure you are in the <span typeof="mw:File"><a href="../PartDesign_Workbench.html" title="PartDesign Workbench"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Part Design Workbench</a>. If required select it from the <a href="../Std_Workbench.html" title="Std Workbench">Workbench dropdown list</a>. Once there, you will want to create a new document if you have not done so already. It is a good habit to save your work often, so first save the new document, giving it any name you choose.
+<p>Nejprve se ujist&#283;te, &#382;e jste v <span typeof="mw:File"><a href="../PartDesign_Workbench.html" title="PartDesign Workbench"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plo&scaron;e Part Design</a>. V p&#345;&iacute;pad&#283; pot&#345;eby ho vyberte z <a href="../Std_Workbench.html" title="Std Workbench">rozev&iacute;rac&iacute;ho seznamu pracovn&iacute;ch prost&#345;ed&iacute;</a>. Jakmile tam budete, budete cht&iacute;t vytvo&#345;it nov&yacute; dokument, pokud jste tak je&scaron;t&#283; neu&#269;inili. Je dobr&eacute; si zvyknout svou pr&aacute;ci &#269;asto ukl&aacute;dat, tak&#382;e nejprve nov&yacute; dokument ulo&#382;te a pojmenujte ho podle sv&eacute;ho uv&aacute;&#382;en&iacute;.
 </p><p>All work in Part Design begins with a <a href="../Glossary.html#Body" title="Glossary">body</a>. Click <span typeof="mw:File"><a href="../PartDesign_Body.html" title="PartDesign Body"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Create new body</a> to create and activate one. Note that it is also possible to skip this step: when creating a sketch using the Part Design <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> tool, if no existing body is found, a new one is automatically created and activated.
 </p>
 <h2><span class="mw-headline" id="Master_sketch">Master sketch</span></h2>
@@ -402,12 +402,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120155054
+Cached time: 20260120155329
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.267 seconds
-Real time usage: 0.338 seconds
+CPU time usage: 0.290 seconds
+Real time usage: 0.386 seconds
 Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -418,19 +418,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.382      1 -total
- 19.51%    7.490      1 Template:Sketcher_Tools_navi/cs
- 18.13%    6.960      1 Template:PartDesign_Tools_navi/cs
- 17.10%    6.565      3 Template:Navigation_menu_2
- 13.08%    5.020      1 Template:Userdocnavi/cs
-  7.76%    2.977      1 Template:TutorialInfo
-  7.16%    2.747      7 Template:ComboBox
-  6.72%    2.578      3 Template:CheckBox
-  6.24%    2.396     19 Template:Button
-  4.57%    1.756      1 Template:Version
+100.00%   37.312      1 -total
+ 20.40%    7.613      1 Template:PartDesign_Tools_navi/cs
+ 20.37%    7.601      3 Template:Navigation_menu_2
+ 17.51%    6.535      1 Template:Sketcher_Tools_navi/cs
+ 13.58%    5.068      1 Template:Userdocnavi/cs
+ 10.05%    3.750      1 Template:TutorialInfo
+  9.59%    3.578      3 Template:CheckBox
+  5.72%    2.133      7 Template:ComboBox
+  4.57%    1.706     19 Template:Button
+  4.46%    1.663      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155054 and revision id 1741581. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155328 and revision id 1741583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
