--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -4,7 +4,7 @@
 <li><a href="../fr/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Tutoriel d'introduction V0.19 (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="Esercitazione di base su Part Design 019 (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Projekt Cz&#281;&#347;ci 019 (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--low" title="&#1059;&#1088;&#1086;&#1082; &#1087;&#1086; &#1073;&#1072;&#1079;&#1086;&#1074;&#1099;&#1084; &#1074;&#1086;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086;&#1089;&#1090;&#1103;&#1084; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; Part Design 019 (1% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--low" title="&#1058;&#1091;&#1090;&#1086;&#1088;&#1110;&#1072;&#1083; &#1079; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1091;&#1074;&#1072;&#1085;&#1085;&#1103; &#1073;&#1072;&#1079;&#1086;&#1074;&#1086;&#1111; &#1076;&#1077;&#1090;&#1072;&#1083;&#1110; 019 (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" style="width: 230px; float: right; margin-left: 1em">
@@ -89,7 +89,7 @@
 </p>
 <h2><span id="Zah.C3.A1jen.C3.AD"></span><span class="mw-headline" id="Zah&aacute;jen&iacute;">Zah&aacute;jen&iacute;</span></h2>
 <p>Nejprve se ujist&#283;te, &#382;e jste v <span typeof="mw:File"><a href="../PartDesign_Workbench.html" title="PartDesign Workbench"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plo&scaron;e Part Design</a>. V p&#345;&iacute;pad&#283; pot&#345;eby ho vyberte z <a href="../Std_Workbench.html" title="Std Workbench">rozev&iacute;rac&iacute;ho seznamu pracovn&iacute;ch prost&#345;ed&iacute;</a>. Jakmile tam budete, budete cht&iacute;t vytvo&#345;it nov&yacute; dokument, pokud jste tak je&scaron;t&#283; neu&#269;inili. Je dobr&eacute; si zvyknout svou pr&aacute;ci &#269;asto ukl&aacute;dat, tak&#382;e nejprve nov&yacute; dokument ulo&#382;te a pojmenujte ho podle sv&eacute;ho uv&aacute;&#382;en&iacute;.
-</p><p>All work in Part Design begins with a <a href="../Glossary.html#Body" title="Glossary">body</a>. Click <span typeof="mw:File"><a href="../PartDesign_Body.html" title="PartDesign Body"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Create new body</a> to create and activate one. Note that it is also possible to skip this step: when creating a sketch using the Part Design <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> tool, if no existing body is found, a new one is automatically created and activated.
+</p><p>Ve&scaron;ker&aacute; pr&aacute;ce v Part Design za&#269;&iacute;n&aacute; s <a href="../Glossary.html#Body" title="Glossary">t&#283;lesem</a>. Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_Body.html" title="PartDesign Body"><img src="../File/PartDesign_Body.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Vytvo&#345;it nov&eacute; t&#283;leso</a>, abyste jedno vytvo&#345;ili a aktivovali. V&scaron;imn&#283;te si, &#382;e tento krok je tak&eacute; mo&#382;n&eacute; p&#345;esko&#269;it: p&#345;i vytv&aacute;&#345;en&iacute; n&aacute;&#269;rtu pomoc&iacute; n&aacute;stroje Part Design <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> se v p&#345;&iacute;pad&#283;, &#382;e nen&iacute; nalezeno &#382;&aacute;dn&eacute; existuj&iacute;c&iacute; t&#283;leso, automaticky vytvo&#345;&iacute; a aktivuje nov&eacute;.
 </p>
 <h2><span class="mw-headline" id="Master_sketch">Master sketch</span></h2>
 <p>The master sketch contains the model's rectangular base shape and two <b>named constraints</b> that will supply correct dimensions to other parts of the model: <b>length</b> that will contain 53 mm (the result of adding the 39 mm dimension to the two 7 mm sides), and <b>width</b> that will contain 26 mm. To be able to take advantage of the model's symmetry in later steps, the top edge of the rectangle will be centered around the origin with a symmetrical constraint.
@@ -402,12 +402,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120155329
+Cached time: 20260120155607
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.290 seconds
-Real time usage: 0.386 seconds
+CPU time usage: 0.278 seconds
+Real time usage: 0.481 seconds
 Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -418,19 +418,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.312      1 -total
- 20.40%    7.613      1 Template:PartDesign_Tools_navi/cs
- 20.37%    7.601      3 Template:Navigation_menu_2
- 17.51%    6.535      1 Template:Sketcher_Tools_navi/cs
- 13.58%    5.068      1 Template:Userdocnavi/cs
- 10.05%    3.750      1 Template:TutorialInfo
-  9.59%    3.578      3 Template:CheckBox
-  5.72%    2.133      7 Template:ComboBox
-  4.57%    1.706     19 Template:Button
-  4.46%    1.663      8 Template:KEY
+100.00%   54.165      1 -total
+ 18.17%    9.842      1 Template:TutorialInfo
+ 17.63%    9.549      1 Template:Sketcher_Tools_navi/cs
+ 16.71%    9.049      1 Template:PartDesign_Tools_navi/cs
+ 14.71%    7.966      3 Template:Navigation_menu_2
+ 10.02%    5.428      1 Template:Userdocnavi/cs
+  8.35%    4.524     19 Template:Button
+  6.30%    3.413      3 Template:CheckBox
+  5.16%    2.794      5 Template:Clear
+  4.76%    2.578      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155328 and revision id 1741583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155606 and revision id 1741585. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
