--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -93,7 +93,7 @@
 </p><p><span id="Master_sketch"></span>
 </p>
 <h2><span id="Hlavn.C3.AD_n.C3.A1.C4.8Drt"></span><span class="mw-headline" id="Hlavn&iacute;_n&aacute;&#269;rt">Hlavn&iacute; n&aacute;&#269;rt</span></h2>
-<p>The master sketch contains the model's rectangular base shape and two <b>named constraints</b> that will supply correct dimensions to other parts of the model: <b>length</b> that will contain 53 mm (the result of adding the 39 mm dimension to the two 7 mm sides), and <b>width</b> that will contain 26 mm. To be able to take advantage of the model's symmetry in later steps, the top edge of the rectangle will be centered around the origin with a symmetrical constraint.
+<p>Hlavn&iacute; n&aacute;&#269;rt obsahuje obd&eacute;ln&iacute;kov&yacute; tvar z&aacute;kladny modelu a dv&#283; <b>pojmenovan&eacute; vazby</b>, kter&eacute; dodaj&iacute; spr&aacute;vn&eacute; rozm&#283;ry ostatn&iacute;m &#269;&aacute;stem modelu: <b>d&eacute;lka</b> kter&aacute; bude m&iacute;t rozm&#283;r 53 mm (v&yacute;sledek s&#269;&iacute;t&aacute;n&iacute; rozm&#283;ru 39 mm se dv&#283;ma stranami o rozm&#283;ru 7 mm) a <b>&scaron;&iacute;&#345;ka</b> kter&aacute; bude m&iacute;t d&eacute;lku 26 mm. Aby bylo mo&#382;n&eacute; v dal&scaron;&iacute;ch kroc&iacute;ch vyu&#382;&iacute;t symetrii modelu, bude horn&iacute; hrana obd&eacute;ln&iacute;ku vycentrov&aacute;na kolem po&#269;&aacute;tku pomoc&iacute; symetrick&eacute; vazby.
 </p><p><b><big>Sketch</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_start_00.png&amp;filetimestamp=20221017080634&amp;.html" class="mw-file-description"><img src="../File/Pd_start_00.png" decoding="async" width="300" height="163" class="mw-file-element" data-file-width="1309" data-file-height="710"></a><figcaption>Fig: MS1</figcaption></figure>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120155641
+Cached time: 20260120155956
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.316 seconds
-Real time usage: 0.443 seconds
+CPU time usage: 0.284 seconds
+Real time usage: 0.930 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.623      1 -total
- 20.94%    9.763      1 Template:PartDesign_Tools_navi/cs
- 17.41%    8.116      1 Template:Sketcher_Tools_navi/cs
- 16.86%    7.860      3 Template:Navigation_menu_2
- 14.28%    6.656      1 Template:Userdocnavi/cs
-  8.50%    3.965      3 Template:CheckBox
-  7.80%    3.637      1 Template:TutorialInfo
-  6.43%    3.000      7 Template:ComboBox
-  5.20%    2.424     19 Template:Button
-  4.97%    2.319      8 Template:KEY
+100.00%   74.349      1 -total
+ 19.36%   14.395      1 Template:PartDesign_Tools_navi/cs
+ 11.51%    8.561      1 Template:Userdocnavi/cs
+ 11.32%    8.418      1 Template:TutorialInfo
+ 11.10%    8.253      3 Template:Navigation_menu_2
+ 10.78%    8.016      1 Template:Sketcher_Tools_navi/cs
+  9.99%    7.427     19 Template:Button
+  6.84%    5.089      8 Template:KEY
+  6.51%    4.840      3 Template:CheckBox
+  6.09%    4.527      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155641 and revision id 1741587. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120155955 and revision id 1741589. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
