Created page with "# Klikněte na [[File:PartDesign_NewSketch.svg|24px|link=PartDesign_NewSketch]] [[PartDesign_NewSketch|Vytvořit náčrt]]. Tím se vytvoří náčrt uvnitř právě vytvořeného tělesa. Bude pojmenován '''Sketch'''. # Otevře se panel úkolů jako na '''Obr.: MS1''', kde musíte vybrat, ke které rovině bude skica připojena. ## Vyberte '''Rovinu_XY''' ze seznamu nebo vyberte tuto rovinu v [[3D_view|3D pohledu]]. ## Klikněte na {{Button|OK}}. # FreeCAD se automatic..."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -104,12 +104,12 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_rect_v3.png&amp;filetimestamp=20221024084029&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect_v3.png" decoding="async" width="300" height="222" class="mw-file-element" data-file-width="405" data-file-height="300"></a><figcaption>Fig: MS6</figcaption></figure>
 <p><b>Krok A: Vytvo&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
-<ol><li>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a>. This will create the sketch within the just created body. It will be named <b>Sketch</b>.</li>
-<li>A task panel like <b>Fig: MS1</b> will open where you have to choose to which plane the sketch will be attached.
-<ol><li>Select <b>XY_Plane</b> from the list or select that plane in the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>FreeCAD automatically switches to the <span typeof="mw:File"><a href="../Sketcher_Workbench.html" title="Sketcher Workbench"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a>.</li>
-<li>The sketch is opened in edit mode: you will see something like <b>Fig: MS2</b>. The X axis (the red line) and Y axis (the green line) of the sketch are indicated, as well as its origin (the red point).</li></ol>
+<ol><li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a>. T&iacute;m se vytvo&#345;&iacute; n&aacute;&#269;rt uvnit&#345; pr&aacute;v&#283; vytvo&#345;en&eacute;ho t&#283;lesa. Bude pojmenov&aacute;n <b>Sketch</b>.</li>
+<li>Otev&#345;e se panel &uacute;kol&#367; jako na <b>Obr.: MS1</b>, kde mus&iacute;te vybrat, ke kter&eacute; rovin&#283; bude skica p&#345;ipojena.
+<ol><li>Vyberte <b>Rovinu_XY</b> ze seznamu nebo vyberte tuto rovinu v <a href="../3D_view.html" class="mw-redirect" title="3D view">3D pohledu</a>.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
+<li>FreeCAD se automaticky p&#345;epne na <span typeof="mw:File"><a href="../Sketcher_Workbench.html" title="Sketcher Workbench"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">pracovn&iacute; plochu Sketcher</a>.</li>
+<li>N&aacute;&#269;rt se otev&#345;e v re&#382;imu &uacute;prav: uvid&iacute;te n&#283;co jako na <b>Obr.: MS2</b>. Je zde zn&aacute;zorn&#283;na osa X (&#269;erven&aacute; &#269;&aacute;ra) a osa Y (zelen&aacute; &#269;&aacute;ra) n&aacute;&#269;rtu, stejn&#283; jako jeho po&#269;&aacute;tek (&#269;erven&yacute; bod).</li></ol>
 <p><b>Step B: Add geometry</b>
 </p>
 <ol><li>Click <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Create rectangle</a>.</li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120160121
+Cached time: 20260120160733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.255 seconds
-Real time usage: 0.336 seconds
+CPU time usage: 0.317 seconds
+Real time usage: 1.227 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.842      1 -total
- 20.10%    9.212      1 Template:PartDesign_Tools_navi/cs
- 16.32%    7.482      3 Template:Navigation_menu_2
- 16.30%    7.474      1 Template:Sketcher_Tools_navi/cs
- 13.73%    6.292      1 Template:Userdocnavi/cs
-  9.91%    4.544      3 Template:CheckBox
-  6.96%    3.193      7 Template:ComboBox
-  5.99%    2.747     19 Template:Button
-  5.53%    2.533      8 Template:KEY
-  5.27%    2.414      1 Template:TutorialInfo
+100.00%   89.010      1 -total
+ 21.49%   19.125      1 Template:Userdocnavi/cs
+ 20.98%   18.678      1 Template:Sketcher_Tools_navi/cs
+ 20.00%   17.801      3 Template:Navigation_menu_2
+ 16.75%   14.907      1 Template:PartDesign_Tools_navi/cs
+ 11.21%    9.980     19 Template:Button
+  5.83%    5.193      1 Template:Version
+  5.78%    5.141      3 Template:CheckBox
+  5.13%    4.563      1 Template:TutorialInfo
+  3.78%    3.361      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160121 and revision id 1741593. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160731 and revision id 1741595. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
