Created page with "'''Krok F: Zavření náčrtu'''"

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -147,7 +147,7 @@
 <ul><li>Linie na n&aacute;&#269;rtu jsou jasn&#283; zelen&eacute;.</li>
 <li>V &#269;&aacute;sti <b>Zpr&aacute;vy &#345;e&scaron;itele</b> na panelu &uacute;kol&#367; se zobrazuje <b>Pln&#283; zavazbeno</b>.</li>
 <li>Pokud vyberete libovolnou linii nebo vrchol n&aacute;&#269;rtu a pokus&iacute;te se ho p&#345;et&aacute;hnout, nepohne se.</li></ul></li></ol>
-<p><b>Step F: Close the sketch</b>
+<p><b>Krok F: Zav&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> at the top of the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">tasks panel</a> to leave sketch edit mode.</dd></dl>
 <div style="clear:both"></div>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164121
+Cached time: 20260120164145
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.302 seconds
-Real time usage: 1.286 seconds
+CPU time usage: 0.291 seconds
+Real time usage: 0.386 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  113.941      1 -total
- 26.41%   30.091      1 Template:Sketcher_Tools_navi/cs
- 22.48%   25.613      3 Template:Navigation_menu_2
- 13.66%   15.564      1 Template:PartDesign_Tools_navi/cs
- 11.36%   12.945      3 Template:CheckBox
- 11.24%   12.808      1 Template:Version
- 11.18%   12.743      8 Template:KEY
-  8.20%    9.338      1 Template:Userdocnavi/cs
-  4.34%    4.949      7 Template:ComboBox
-  3.88%    4.419      1 Template:TutorialInfo
+100.00%   38.213      1 -total
+ 32.44%   12.395      1 Template:PartDesign_Tools_navi/cs
+ 31.12%   11.893      3 Template:Navigation_menu_2
+ 18.18%    6.946      1 Template:Sketcher_Tools_navi/cs
+ 10.96%    4.187      1 Template:Userdocnavi/cs
+  6.01%    2.296      1 Template:TutorialInfo
+  5.18%    1.980      3 Template:CheckBox
+  4.87%    1.861      7 Template:ComboBox
+  4.68%    1.788     19 Template:Button
+  4.10%    1.565      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164120 and revision id 1741613. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164145 and revision id 1741615. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
