--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164400
+Cached time: 20260120164406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.293 seconds
-Real time usage: 0.439 seconds
+CPU time usage: 0.328 seconds
+Real time usage: 0.447 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.986      1 -total
- 22.15%    9.963      1 Template:PartDesign_Tools_navi/cs
- 16.48%    7.413      3 Template:Navigation_menu_2
- 15.53%    6.988      1 Template:Sketcher_Tools_navi/cs
- 11.00%    4.949      1 Template:Userdocnavi/cs
- 10.17%    4.577      3 Template:CheckBox
-  7.84%    3.526      1 Template:TutorialInfo
-  7.32%    3.292      7 Template:ComboBox
-  5.26%    2.366     19 Template:Button
-  5.24%    2.356      8 Template:KEY
+100.00%   73.234      1 -total
+ 21.56%   15.790      1 Template:PartDesign_Tools_navi/cs
+ 14.25%   10.436      3 Template:Navigation_menu_2
+ 14.12%   10.344      1 Template:Sketcher_Tools_navi/cs
+ 12.03%    8.811      1 Template:Userdocnavi/cs
+  8.47%    6.202      7 Template:ComboBox
+  7.47%    5.473      1 Template:TutorialInfo
+  7.36%    5.387      1 Template:Version
+  6.78%    4.968      3 Template:CheckBox
+  6.59%    4.824     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164359 and revision id 1741621. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164406 and revision id 1741621. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
