Created page with "'''Krok A: Vytvoření náčrtku'''"

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -159,7 +159,7 @@
 </p>
 <figure class="mw-halign-right" typeof="mw:File/Thumb"><a href="../index.php?title=OffsetSketch001.png&amp;filetimestamp=20221114205344&amp;.html" class="mw-file-description"><img src="../File/OffsetSketch001.png" decoding="async" width="240" height="270" class="mw-file-element" data-file-width="265" data-file-height="298"></a><figcaption>Fig. MP1</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_side_fc.png&amp;filetimestamp=20231115103208&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_side_fc.png" decoding="async" width="240" height="239" class="mw-file-element" data-file-width="300" data-file-height="299"></a><figcaption>Fig: MP2</figcaption></figure>
-<p><b>Step A: Create the sketch</b>
+<p><b>Krok A: Vytvo&#345;en&iacute; n&aacute;&#269;rtku</b>
 </p>
 <dl><dd>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a sketch attached to the <b>YZ_Plane</b>. FreeCAD will assign the name <b>Sketch001</b>.</dd></dl>
 <p><b>Step B: Add geometry</b>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164406
+Cached time: 20260120164529
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.328 seconds
-Real time usage: 0.447 seconds
+CPU time usage: 0.298 seconds
+Real time usage: 0.397 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.234      1 -total
- 21.56%   15.790      1 Template:PartDesign_Tools_navi/cs
- 14.25%   10.436      3 Template:Navigation_menu_2
- 14.12%   10.344      1 Template:Sketcher_Tools_navi/cs
- 12.03%    8.811      1 Template:Userdocnavi/cs
-  8.47%    6.202      7 Template:ComboBox
-  7.47%    5.473      1 Template:TutorialInfo
-  7.36%    5.387      1 Template:Version
-  6.78%    4.968      3 Template:CheckBox
-  6.59%    4.824     19 Template:Button
+100.00%   40.677      1 -total
+ 16.94%    6.892      3 Template:Navigation_menu_2
+ 16.46%    6.697      1 Template:Sketcher_Tools_navi/cs
+ 16.27%    6.620      1 Template:Userdocnavi/cs
+ 15.19%    6.178      1 Template:PartDesign_Tools_navi/cs
+ 12.74%    5.184      1 Template:TutorialInfo
+  6.55%    2.664      5 Template:Clear
+  5.98%    2.433      3 Template:CheckBox
+  5.86%    2.383      7 Template:ComboBox
+  5.41%    2.201     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164406 and revision id 1741621. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164528 and revision id 1741624. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
