Created page with ": Klikněte na [[File:PartDesign_NewSketch.svg|24px|link=PartDesign_NewSketch]] [[PartDesign_NewSketch|Vytvořit náčrt]] a vytvořte náčrt připojený k '''Rovině_YZ'''. FreeCAD mu přiřadí název '''Sketch001'''."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -161,7 +161,7 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_side_fc.png&amp;filetimestamp=20231115103208&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_side_fc.png" decoding="async" width="240" height="239" class="mw-file-element" data-file-width="300" data-file-height="299"></a><figcaption>Fig: MP2</figcaption></figure>
 <p><b>Krok A: Vytvo&#345;en&iacute; n&aacute;&#269;rtku</b>
 </p>
-<dl><dd>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a sketch attached to the <b>YZ_Plane</b>. FreeCAD will assign the name <b>Sketch001</b>.</dd></dl>
+<dl><dd>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_YZ</b>. FreeCAD mu p&#345;i&#345;ad&iacute; n&aacute;zev <b>Sketch001</b>.</dd></dl>
 <p><b>Step B: Add geometry</b>
 </p>
 <ol><li>Click <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Create polyline</a> and make a shape like in <b>Fig: MP1</b>.</li>
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120164529
+Cached time: 20260120164737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.298 seconds
-Real time usage: 0.397 seconds
+CPU time usage: 0.282 seconds
+Real time usage: 0.498 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.677      1 -total
- 16.94%    6.892      3 Template:Navigation_menu_2
- 16.46%    6.697      1 Template:Sketcher_Tools_navi/cs
- 16.27%    6.620      1 Template:Userdocnavi/cs
- 15.19%    6.178      1 Template:PartDesign_Tools_navi/cs
- 12.74%    5.184      1 Template:TutorialInfo
-  6.55%    2.664      5 Template:Clear
-  5.98%    2.433      3 Template:CheckBox
-  5.86%    2.383      7 Template:ComboBox
-  5.41%    2.201     19 Template:Button
+100.00%   84.778      1 -total
+ 25.33%   21.473      1 Template:Sketcher_Tools_navi/cs
+ 17.71%   15.011      1 Template:Userdocnavi/cs
+ 17.31%   14.678      1 Template:PartDesign_Tools_navi/cs
+ 10.86%    9.210      3 Template:Navigation_menu_2
+  6.76%    5.732      3 Template:CheckBox
+  5.60%    4.748      7 Template:ComboBox
+  5.59%    4.739      1 Template:TutorialInfo
+  4.60%    3.897      5 Template:Clear
+  3.95%    3.353      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164528 and revision id 1741624. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120164736 and revision id 1741626. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
