Updated page Basic Part Design Tutorial 019/cs

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -140,7 +140,7 @@
 <ol><li>Vyberte linii definovanou body <b>P3</b> a <b>P4</b> podle <b>Obr.: MS3</b>.</li>
 <li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a>:
 <ol><li>P&#345;i&#345;a&#271;te <b>D&eacute;lka = 26 mm</b></li>
-<li>P&#345;i&#345;a&#271;te <b>N&aacute;zev = v&yacute;&scaron;ka</b>.</li>
+<li>P&#345;i&#345;a&#271;te <b>N&aacute;zev = vyska</b>.</li>
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>V&yacute;sledek by m&#283;l vypadat takto <b>Obr.: MS6</b>.</li>
 <li>N&aacute;&#269;rt je nyn&iacute; zcela zavazben:
@@ -405,12 +405,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120174638
+Cached time: 20260120174723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.268 seconds
-Real time usage: 1.151 seconds
+CPU time usage: 0.311 seconds
+Real time usage: 1.494 seconds
 Preprocessor visited node count: 833/1000000
 Post&#8208;expand include size: 41806/2097152 bytes
 Template argument size: 11566/2097152 bytes
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  181.274      1 -total
- 23.23%   42.109      1 Template:PartDesign_Tools_navi/cs
- 14.35%   26.010      1 Template:Userdocnavi/cs
- 11.48%   20.817      5 Template:Clear
- 11.12%   20.149      1 Template:Version
- 10.68%   19.367      1 Template:Sketcher_Tools_navi/cs
- 10.48%   19.004      3 Template:Navigation_menu_2
-  8.45%   15.326      7 Template:ComboBox
-  7.35%   13.320      1 Template:TutorialInfo
-  5.65%   10.240      3 Template:CheckBox
+100.00%  199.854      1 -total
+ 24.70%   49.370      1 Template:Sketcher_Tools_navi/cs
+ 17.23%   34.437      1 Template:PartDesign_Tools_navi/cs
+ 15.83%   31.641      3 Template:Navigation_menu_2
+  8.04%   16.075      3 Template:CheckBox
+  7.79%   15.559     19 Template:Button
+  7.60%   15.186      5 Template:Clear
+  7.16%   14.319      1 Template:TutorialInfo
+  6.85%   13.681      7 Template:ComboBox
+  6.08%   12.149      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174637 and revision id 1741636. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174721 and revision id 1741638. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
