Created page with ": Klikněte na {{Button|Zavřít}} v horní části [[Task_panel|panelu úkolů]] pro opuštění režimu úprav náčrtu."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -186,7 +186,7 @@
 <li>V&scaron;imn&#283;te si rozd&iacute;ln&yacute;ch barev pou&#382;it&yacute;ch pro vazby vzd&aacute;lenosti p&#345;i&#345;azen&aacute; pomoc&iacute; v&yacute;raz&#367; a pro vazby vzd&aacute;lenosti p&#345;i&#345;azen&aacute; zad&aacute;n&iacute;m d&eacute;lky.</li></ol>
 <p><b>Krok F: Zav&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
-<dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> at the top of the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">tasks panel</a> to leave sketch edit mode.</dd></dl>
+<dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span> v horn&iacute; &#269;&aacute;sti <a href="../Task_panel.html" class="mw-redirect" title="Task panel">panelu &uacute;kol&#367;</a> pro opu&scaron;t&#283;n&iacute; re&#382;imu &uacute;prav n&aacute;&#269;rtu.</dd></dl>
 <p><b><big>Pad</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pad1.png&amp;filetimestamp=20221022092255&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pad1.png" decoding="async" width="240" height="218" class="mw-file-element" data-file-width="550" data-file-height="500"></a><figcaption>Fig: MP3</figcaption></figure>
@@ -405,15 +405,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120174835
+Cached time: 20260120174942
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.297 seconds
-Real time usage: 1.395 seconds
+CPU time usage: 0.295 seconds
+Real time usage: 0.881 seconds
 Preprocessor visited node count: 833/1000000
-Post&#8208;expand include size: 41806/2097152 bytes
-Template argument size: 11566/2097152 bytes
+Post&#8208;expand include size: 41809/2097152 bytes
+Template argument size: 11569/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -421,19 +421,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  146.514      1 -total
- 26.19%   38.370      1 Template:PartDesign_Tools_navi/cs
- 25.00%   36.625      3 Template:Navigation_menu_2
- 19.29%   28.264      1 Template:Sketcher_Tools_navi/cs
- 15.16%   22.218      1 Template:Userdocnavi/cs
-  7.92%   11.601      5 Template:Clear
-  7.68%   11.255      1 Template:TutorialInfo
-  4.62%    6.762      7 Template:ComboBox
-  4.46%    6.529      3 Template:CheckBox
-  4.30%    6.300      1 Template:Version
+100.00%   99.492      1 -total
+ 18.75%   18.656      3 Template:CheckBox
+ 18.71%   18.616      1 Template:PartDesign_Tools_navi/cs
+ 16.90%   16.816      3 Template:Navigation_menu_2
+ 16.22%   16.140      1 Template:Sketcher_Tools_navi/cs
+ 11.99%   11.929      1 Template:TutorialInfo
+ 11.58%   11.521      1 Template:Userdocnavi/cs
+ 10.01%    9.957      5 Template:Clear
+  2.51%    2.499      1 Template:Version
+  2.44%    2.431     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174833 and revision id 1741640. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120174941 and revision id 1741642. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
